# dodeca

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  DEVELOP.md  MEMORY_INVESTIGATION.md  MONOMORPHIZATION-ANALYSIS.md  README.md  README.md.in  RELEASING.md  UNSAFE_MYSTERY.md  build.rs  clippy.toml  dist-workspace.toml  install.ps1  install.sh  knope.toml
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/commands/: ddc-run.md  inspect-shm.md  kill-ddc.md  perf-profile.md  sigusr1-dump.md  strace-transport.md
.config/: dodeca.kdl  dodeca.styx  dodeca.yaml  nextest.toml  perf-wrapper.sh  strace-wrapper.sh  systemd-run-wrapper.sh
.config/captain/: config.styx
.config/tracey/: config.styx  config.yaml
.facet-dev-templates/: readme-footer.md
.forgejo/workflows/: ci.yml
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml  website.yml
benches/: ansi_to_html.rs  html_diff.rs  template.rs
browser-tests/tests/: livereload.spec.ts
cells/cell-arborium/: Cargo.toml
cells/cell-arborium-proto/: Cargo.toml
cells/cell-arborium-proto/src/: lib.rs
cells/cell-authoring-lsp/: Cargo.toml
cells/cell-authoring-lsp-proto/: Cargo.toml
cells/cell-authoring-lsp-proto/src/: lib.rs
cells/cell-authoring-lsp/src/: authoring_lsp.rs  main.rs
cells/cell-code-execution/: Cargo.toml
cells/cell-code-execution-proto/: Cargo.toml
cells/cell-code-execution-proto/src/: lib.rs
cells/cell-code-execution/src/: impl.rs  main.rs
cells/cell-config/: Cargo.toml
cells/cell-config-proto/: Cargo.toml
cells/cell-config/src/: main.rs
cells/cell-css/: Cargo.toml
cells/cell-css-proto/: Cargo.toml
cells/cell-css/src/: main.rs
cells/cell-data/: Cargo.toml
cells/cell-data-proto/: Cargo.toml
cells/cell-data/src/: main.rs
cells/cell-dialoguer/: Cargo.toml
cells/cell-dialoguer-proto/: Cargo.toml
cells/cell-dialoguer/src/: main.rs
cells/cell-embed/: Cargo.toml
cells/cell-embed-proto/: Cargo.toml
cells/cell-embed/assets/: potion-base-8m.LICENSE  potion-base-8m.tokenizer.json.br
cells/cell-embed/src/: main.rs
cells/cell-fonts/: Cargo.toml
cells/cell-fonts-proto/: Cargo.toml
cells/cell-fonts/src/: main.rs
cells/cell-gingembre/: Cargo.toml
cells/cell-gingembre-proto/: Cargo.toml
cells/cell-gingembre-proto/src/: lib.rs
cells/cell-gingembre/src/: main.rs
cells/cell-host-proto/: Cargo.toml
cells/cell-host-proto/src/: lib.rs
cells/cell-html/: Cargo.toml
cells/cell-html-diff/: Cargo.toml
cells/cell-html-diff-proto/: Cargo.toml
cells/cell-html-diff/src/: main.rs
cells/cell-html-proto/: Cargo.toml
cells/cell-html-proto/src/: lib.rs
cells/cell-html/src/: diff.rs  main.rs
cells/cell-http/: Cargo.toml
cells/cell-http-proto/: Cargo.toml
cells/cell-http/src/: devtools.rs  main.rs  tunnel.rs  vite.rs
cells/cell-image/: Cargo.toml
cells/cell-image-proto/: Cargo.toml
cells/cell-image/src/: main.rs
cells/cell-js/: Cargo.toml
cells/cell-js-proto/: Cargo.toml
cells/cell-js/src/: main.rs
cells/cell-jxl/: Cargo.toml
cells/cell-jxl-proto/: Cargo.toml
cells/cell-jxl/src/: main.rs
cells/cell-lifecycle-proto/: Cargo.toml
cells/cell-linkcheck/: Cargo.toml
cells/cell-linkcheck-proto/: Cargo.toml
cells/cell-linkcheck/src/: main.rs
cells/cell-markdown/: Cargo.toml
cells/cell-markdown-proto/: Cargo.toml
cells/cell-markdown-proto/src/: lib.rs
cells/cell-markdown/src/: main.rs
cells/cell-mermaid/: Cargo.toml
cells/cell-mermaid-proto/: Cargo.toml
cells/cell-mermaid/src/: main.rs
cells/cell-minify/: Cargo.toml
cells/cell-minify-proto/: Cargo.toml
cells/cell-minify/src/: main.rs
cells/cell-pagefind/: Cargo.toml
cells/cell-pagefind-proto/: Cargo.toml
cells/cell-pagefind/src/: main.rs
cells/cell-pikru/: Cargo.toml
cells/cell-sass/: Cargo.toml
cells/cell-sass-proto/: Cargo.toml
cells/cell-sass/src/: main.rs
cells/cell-search/: Cargo.toml
cells/cell-search-proto/: Cargo.toml
cells/cell-svgo/: Cargo.toml
cells/cell-svgo-proto/: Cargo.toml
cells/cell-term/: Cargo.toml
cells/cell-term-proto/: Cargo.toml
cells/cell-tui/: Cargo.toml
cells/cell-tui-proto/: Cargo.toml
cells/cell-vite/: Cargo.toml
cells/cell-vite-proto/: Cargo.toml
cells/cell-webp/: Cargo.toml
cells/cell-webp-proto/: Cargo.toml
crates/bearmark/: BEARMARK.md  Cargo.toml
crates/ddc/: Cargo.toml
crates/dodeca/: Cargo.toml  (+3 more)
crates/dodeca-authoring-lsp/: Cargo.toml
crates/dodeca-baseline/: Cargo.toml
crates/dodeca-cell-runtime/: Cargo.toml  README.md  README.md.in
crates/dodeca-code-execution/: Cargo.toml
crates/dodeca-code-execution-config/: Cargo.toml
crates/dodeca-code-execution-types/: Cargo.toml
crates/dodeca-config/: Cargo.toml  README.md  README.md.in
docs/: CONSULTANT-BRIEF-DOORBELL.md  CURSED.md  HANDOFF-HANG-DIAGNOSTICS.md  HANDOFF-HUB-DEBUGGING.md  HANDOFF-HUB-IMPLEMENTATION.md  HANDOFF-RING-PRODUCER-RACE.md  HANDOFF-SHM-REDESIGN.md  LIVERELOAD_DESIGN.md  README.md  SHM-HUB-ARCHITECTURE.md
drafts/: CODE_EXEC.md
hooks/: pre-commit
notes/: authoring-lsp-roadmap.md  gingembre-cstree-parser.md  lsp-awareness.md  markdown-extension-providers.md  migration-backlog.md  monolith-binary-exploration.md  pagefind-replacement.md  repo-absorption-prs.md  shortcode-port.md
scripts/: CAS-SERVER-SETUP.md  assemble-archive.sh  build-browser-assets.sh  build-target.sh  build-wasm.sh  cas-client.ts  cas-download-batch.sh  cas-download-batch.ts  cas-download.ts  cas-known-hosts  cas-ssh-gateway  cas-upload-batch.sh  cas-upload-batch.ts  cas-upload.ts  nextest-build-cells.sh  package-lock.json  package.json  publish-release.sh  repro-ci-artifacts.sh  stage-browser-assets.sh  update-homebrew.sh
src/: cache_bust.rs  cas.rs  code_execution.rs  config.rs  data.rs  db.rs  error_pages.rs  file_watcher.rs  font_subsetter.rs  html_diff.rs  image.rs  lib.rs  link_checker.rs  logging.rs  main.rs  plugins.rs  queries.rs  render.rs  search.rs  serve.rs  svg.rs  theme.rs  types.rs  url_rewrite.rs
tests/: serve_integration.rs
todo/: TERM.md
wix/: main.wxs
xtask/: Cargo.toml  README.md
xtask/src/: ci.rs  main.rs
(+821 files in other folders)
