[workspace]
members = ["crates/*", "cells/*", "xtask"]
default-members = ["crates/*", "cells/*"]
resolver = "3"

# getrandom is required for wasm32 targets (enables wasm_js feature)
# but cargo-shear doesn't detect it since it's feature-activated, not imported
[workspace.metadata.cargo-shear]
# getrandom: required for wasm32 targets (feature-activated)
# facet-default: required by Facet derive macro (transitive)
ignored = ["getrandom", "facet-default"]

[workspace.dependencies]
# Core utilities
camino = "1.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dashmap = "6"
indexmap = "2"
regex = "1.12"
url = "2"

# Error handling
ariadne = "0.5"
color-eyre = "0.6"
eyre = "0.6"
thiserror = "2.0"

# Async runtime
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.48", features = [
  "full",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }

# HTTP/networking
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1"] }
if-addrs = "0.14"
reqwest = { version = "0.13", features = ["blocking"] }
tokio-tungstenite = "0.26"
ureq = { version = "3", default-features = false }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
  "smallvec",
  "std",
] }

# Serialization - Facet ecosystem (git)
# Do NOT change those to path dependencies, use the patch blocks below.
hotmeal = { git = "https://github.com/bearcove/hotmeal", branch = "main" }
hotmeal-wasm = { git = "https://github.com/bearcove/hotmeal", branch = "main" }

facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-default = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-toml = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-yaml = { git = "https://github.com/facet-rs/facet", branch = "main" }

facet-styx = { git = "https://github.com/bearcove/styx", branch = "main" }
styx-embed = { git = "https://github.com/bearcove/styx", branch = "main" }

figue = { git = "https://github.com/bearcove/figue", branch = "main" }

# RPC framework
roam = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-shm = { git = "https://github.com/bearcove/roam", branch = "main", features = ["tracing"] }
roam-tracing = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-fdpass = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-local = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-session = { git = "https://github.com/bearcove/roam", branch = "main", features = ["tracing"] }
roam-websocket = { git = "https://github.com/bearcove/roam", branch = "main" }

# Process lifecycle
ur-taking-me-with-you = { git = "https://github.com/bearcove/roam", branch = "main", features = [
  "tokio",
] }

# Incremental computation
picante = { git = "https://github.com/bearcove/picante", branch = "main" }

# File system
fs-err = "3"
ignore = "0.4"
notify = "8"
tempfile = "3.24"

# CLI/TUI
crossterm = "0.29"
dialoguer = "0.12"
include_dir = "0.7"
owo-colors = "4"
ratatui = "0.30"
structstruck = "0.5"
html-escape = "0.2"

# CSS processing
lightningcss = { version = "1.0.0-alpha.68", features = ["visitor"] }
grass = { version = "0.13", features = ["macro"] }

# JavaScript processing
oxc = { version = "0.105", features = ["full"] }

# Image processing
base64 = "0.22"
image = { version = "0.25", features = ["png", "jpeg", "gif"] }
jpegxl-rs = { version = "0.11", features = ["vendored"] }
thumbhash = "0.1"
webp = "0.3"

# Font processing
fontcull = { version = "2.0", default-features = false }

# Markdown
pulldown-cmark = "0.13"
arborium-theme = "2"

# SVG optimization (git)
svag = { git = "https://github.com/bearcove/svag" }
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing-wasm = "0.2"
wasm-bindgen = "=0.2.108"
web-sys = { version = "0.3", features = [
  "BinaryType",
  "CloseEvent",
  "Document",
  "Element",
  "ErrorEvent",
  "HtmlElement",
  "HtmlLinkElement",
  "Location",
  "MessageEvent",
  "Node",
  "NodeList",
  "Text",
  "WebSocket",
  "Window",
  "console",
] }
libc = "0.2"
rapidhash = "4"
strid = "8.0"
# strid = { path = "../strid/crates/strid" }

# Misc utilities
open = "5"

# Linux-only
hakoniwa = "1.2"

[workspace.package]
rust-version = "1.91"

# Force all transitive facet dependencies to use local version for development
[patch.crates-io]
facet-svg = { git = "https://github.com/facet-rs/facet-xml", branch = "main" }
facet-xml = { git = "https://github.com/facet-rs/facet-xml", branch = "main" }
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-macro-parse = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-macro-types = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-macros = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-macros-impl = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-pretty = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-solver = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-toml = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-yaml = { git = "https://github.com/facet-rs/facet", branch = "main" }
pikru = { git = "https://github.com/bearcove/pikru", branch = "main" }
dagre_rust = { git = "https://github.com/bearcove/dagre-rust", branch = "main" }

# Uncomment to use local facet for development
# [patch.crates-io]
# cinereus = { path = "../hotmeal/cinereus" }
# facet-dom = { path = "../facet-xml/facet-dom" }
# facet-svg = { path = "../facet-xml/facet-svg" }
# facet = { path = "../facet/facet" }
# facet-args = { path = "../facet/facet-args" }
# facet-core = { path = "../facet/facet-core" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-xml = { path = "../facet/facet-xml" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Uncomment to use local figue for development
# [patch."https://github.com/bearcove/figue"]
# figue = { path = "../figue/crates/figue" }

# Uncomment to use local hotmeal for development
# [patch."https://github.com/bearcove/hotmeal"]
# cinereus = { path = "../hotmeal/cinereus" }
# hotmeal = { path = "../hotmeal/hotmeal" }
# hotmeal-wasm = { path = "../hotmeal/hotmeal-wasm" }

# [patch."https://github.com/facet-rs/facet-xml"]
# facet-dom = { path = "../facet-xml/facet-dom" }
# facet-svg = { path = "../facet-xml/facet-svg" }

# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-args = { path = "../facet/facet-args" }
# facet-core = { path = "../facet/facet-core" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-xml = { path = "../facet/facet-xml" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Patch git dependencies to use local facet
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-core = { path = "../facet/facet-core" }
# facet-default = { path = "../facet/facet-default" }
# facet-dessert = { path = "../facet/facet-dessert" }
# facet-format = { path = "../facet/facet-format" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-path = { path = "../facet/facet-path" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Uncomment to use local styx for development
# [patch."https://github.com/bearcove/styx"]
# facet-styx = { path = "../styx/crates/facet-styx" }
# styx-parse = { path = "../styx/crates/styx-parse" }
# styx-format = { path = "../styx/crates/styx-format" }
# styx-embed = { path = "../styx/crates/styx-embed" }
# styx-embed-macros = { path = "../styx/crates/styx-embed-macros" }

# Optimize dependencies in dev mode for faster tests
# (keeps main crate unoptimized for fast incremental builds)
[profile.dev.package."*"]
opt-level = 2

# Reduce debug info size (line tables only, no variable info)
# Light optimization for better runtime without killing incremental builds
[profile.dev]
debug = "line-tables-only"
opt-level = 1
# On macOS, split debug info for faster linking
split-debuginfo = "unpacked"

# Fast compilation profile for rapid iteration
# Uses cranelift backend (faster than LLVM, less optimized output)
# Usage: cargo +nightly build --profile fast -Zcodegen-backend
[profile.fast]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"

# Test profile with full debug symbols for profiling
[profile.test]
inherits = "dev"
debug = true

# Release profile with reduced debug info for smaller binaries
[profile.release]
debug = "line-tables-only"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Debug-friendly profile for investigating mysteries (hangs, crashes, etc.)
# Usage: cargo build --profile mystery
[profile.mystery]
inherits = "release"
opt-level = 1
debug = true
strip = false
