[workspace]
members = ["crates/*", "cells/*", "xtask"]
default-members = ["crates/*", "cells/*"]
exclude = [
  "libs/aasvg",
  "libs/fontcull/fontcull",
  "libs/hotmeal/hotmeal",
  "libs/hotmeal/hotmeal-server",
  "libs/hotmeal/hotmeal-wasm",
  "libs/marq",
  "libs/pikru",
  "libs/svag",
]
resolver = "3"

# getrandom is required for wasm32 targets (enables wasm_js feature)
# but cargo-shear doesn't detect it since it's feature-activated, not imported
[workspace.metadata.cargo-shear]
# getrandom: required for wasm32 targets (feature-activated)
# facet-default: required by Facet derive macro (transitive)
ignored = ["getrandom", "facet-default"]

[workspace.dependencies]
# Core utilities
aho-corasick = "1.1"
brotli = "8"
camino = "1.2"
tokenizers = "0.23"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dashmap = "6"
indexmap = "2"
regex = "1.12"
globset = "0.4"
url = "2"

# Error handling
ariadne = "0.5"
color-eyre = "0.6"
eyre = "0.6"
thiserror = "2.0"

# Async runtime
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.48", features = [
  "full",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }

# HTTP/networking
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1"] }
if-addrs = "0.14"
reqwest = { version = "0.13", features = ["blocking"] }
tokio-tungstenite = "0.26"
ureq = { version = "3", default-features = false }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
  "smallvec",
  "std",
] }

# Absorbed first-wave Dodeca libraries.
hotmeal = { path = "libs/hotmeal/hotmeal" }
hotmeal-server = { path = "libs/hotmeal/hotmeal-server", features = ["tracing"] }
hotmeal-wasm = { path = "libs/hotmeal/hotmeal-wasm" }

facet = "0.50.0-rc.0"
facet-default = "0.50.0-rc.0"
facet-format = "0.50.0-rc.0"
facet-json = "0.50.0-rc.0"
facet-postcard = "0.50.0-rc.0"
facet-toml = "0.50.0-rc.0"
facet-value = "0.50.0-rc.0"
facet-yaml = "0.50.0-rc.0"

facet-styx = "5.0.0-rc.0"
styx-embed = "5.0.0-rc.0"
styx-tree = "5.0.0-rc.0"

figue = "5.0.0-rc.0"

# RPC framework
# Minimal by default: protocol crates and the DevTools bridge need the service
# macro + runtime. Transports stay opt-in per crate so they do not leak back
# into the in-process processors or wasm builds.
vox = { version = "0.10.0-rc.0", default-features = false, features = ["runtime"] }
vox-fdpass = "0.10.0-rc.0"
vox-stream = "0.10.0-rc.0"

# Process lifecycle
ur-taking-me-with-you = { version = "8", features = ["tokio"] }

# Incremental computation
picante = "3.0.0-rc.0"

# File system
fs-err = "3"
ignore = "0.4"
notify = "8"
tempfile = "3.24"

# CLI/TUI
crossterm = "0.29"
dialoguer = "0.12"
include_dir = "0.7"
owo-colors = "4"
ratatui = "0.30"
structstruck = "0.5"
html-escape = "0.2"

# CSS processing
lightningcss = { version = "1.0.0-alpha.68", features = ["visitor"] }
grass = { version = "0.13", features = ["macro"] }

# JavaScript processing
oxc = { version = "0.109", features = ["full"] }

# Image processing
base64 = "0.22"
image = { version = "0.25", features = ["png", "jpeg", "gif"] }
jpegxl-rs = { version = "0.11", features = ["vendored"] }
thumbhash = "0.1"
webp = "0.3"

# Font processing
fontcull = { path = "libs/fontcull/fontcull", default-features = false }

# Markdown
marq = { path = "libs/marq" }
pulldown-cmark = "0.13"
arborium-theme = "2"

# Search (from-scratch, pagefind-inspired full-text search)
rust-stemmers = "1.2"
unicode-segmentation = "1.13"

# SVG optimization
svag = { path = "libs/svag" }
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing-wasm = "0.2"
tower-lsp = "0.20"
wasm-bindgen = "=0.2.108"
web-sys = { version = "0.3", features = [
  "BinaryType",
  "CloseEvent",
  "Document",
  "Element",
  "ErrorEvent",
  "HtmlElement",
  "HtmlLinkElement",
  "Location",
  "MessageEvent",
  "Node",
  "NodeList",
  "Text",
  "WebSocket",
  "Window",
  "console",
] }
libc = "0.2"
rapidhash = "4"
strid = "11.0.0-rc.0"
serde_json = "1.0.150"

# Misc utilities
open = "5"

# Linux-only
hakoniwa = "1.2"

[workspace.package]
rust-version = "1.92"

# Force all transitive facet dependencies to use local version for development
# No [patch.crates-io] for facet: everything is on crates.io facet 0.46.x now.

# Uncomment to use local facet for development
# cinereus = { path = "../hotmeal/cinereus" }
# facet-dom = { path = "../facet-xml/facet-dom" }
# facet-svg = { path = "../facet-xml/facet-svg" }
# facet = { path = "../facet/facet" }
# facet-args = { path = "../facet/facet-args" }
# facet-core = { path = "../facet/facet-core" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-xml = { path = "../facet/facet-xml" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Uncomment to use local figue for development
# [patch."https://github.com/bearcove/figue"]
# figue = { path = "../figue/crates/figue" }


# [patch."https://github.com/facet-rs/facet-xml"]
# facet-dom = { path = "../facet-xml/facet-dom" }
# facet-svg = { path = "../facet-xml/facet-svg" }

# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-args = { path = "../facet/facet-args" }
# facet-core = { path = "../facet/facet-core" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }

[patch.crates-io]
aasvg = { path = "libs/aasvg" }
pikru = { path = "libs/pikru" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-xml = { path = "../facet/facet-xml" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Patch git dependencies to use local facet
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-core = { path = "../facet/facet-core" }
# facet-default = { path = "../facet/facet-default" }
# facet-dessert = { path = "../facet/facet-dessert" }
# facet-format = { path = "../facet/facet-format" }
# facet-json = { path = "../facet/facet-json" }
# facet-macro-parse = { path = "../facet/facet-macro-parse" }
# facet-macro-types = { path = "../facet/facet-macro-types" }
# facet-macros = { path = "../facet/facet-macros" }
# facet-macros-impl = { path = "../facet/facet-macros-impl" }
# facet-path = { path = "../facet/facet-path" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }
# facet-yaml = { path = "../facet/facet-yaml" }

# Uncomment to use local styx for development
# [patch."https://github.com/bearcove/styx"]
# facet-styx = { path = "../styx/crates/facet-styx" }
# styx-parse = { path = "../styx/crates/styx-parse" }
# styx-format = { path = "../styx/crates/styx-format" }
# styx-embed = { path = "../styx/crates/styx-embed" }
# styx-embed-macros = { path = "../styx/crates/styx-embed-macros" }

# Optimize dependencies in dev mode for faster tests
# (keeps main crate unoptimized for fast incremental builds)
[profile.dev.package."*"]
opt-level = 2

# Reduce debug info size (line tables only, no variable info)
# Light optimization for better runtime without killing incremental builds
[profile.dev]
debug = "line-tables-only"
opt-level = 1
# On macOS, split debug info for faster linking
split-debuginfo = "unpacked"

# Fast compilation profile for rapid iteration
# Usage: cargo +nightly build --profile fast -Zcodegen-backend
[profile.fast]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"

# Test profile with full debug symbols for profiling
[profile.test]
inherits = "dev"
debug = true

# Release profile with reduced debug info for smaller binaries
[profile.release]
debug = "line-tables-only"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Debug-friendly profile for investigating mysteries (hangs, crashes, etc.)
# Usage: cargo build --profile mystery
[profile.mystery]
inherits = "release"
opt-level = 1
debug = true
strip = false
