[package]
name = "xtask"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
camino.workspace = true
facet = { workspace = true, features = ["indexmap"] }
figue.workspace = true
facet-yaml.workspace = true
fs-err.workspace = true
indexmap.workspace = true
eyre.workspace = true
owo-colors.workspace = true
structstruck.workspace = true
# For `xtask codegen --typescript`: the same generator + protocol descriptors that
# crates/dodeca/build.rs uses to emit the bundles' *.generated.ts vox bindings.
dodeca-protocol = { path = "../crates/dodeca-protocol" }
vox-codegen = "0.10.0-rc.0"
