[package]
name = "cell-arborium-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "RPC protocol for dodeca syntax highlighting plugin"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = "0.32.2"
# RPC framework
rapace.workspace = true
