[package]
name = "cell-code-execution-proto"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-default.workspace = true
facet-yaml.workspace = true
roam.workspace = true
