[package]
name = "cell-code-execution"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-code-execution"
path = "src/main.rs"

[dependencies]
cell-code-execution-proto = { path = "../cell-code-execution-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
pulldown-cmark.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
