[package]
autobins = false
name = "cell-code-execution"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_code_execution"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[features]
default = ["dynamic-cell"]
dynamic-cell = ["dep:dodeca-cell-runtime"]

[dependencies]
cell-code-execution-proto = { path = "../cell-code-execution-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime", optional = true }
pulldown-cmark.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
