[package]
autobins = false
name = "cell-code-execution"
version = "0.0.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_code_execution"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-code-execution-proto = { path = "../cell-code-execution-proto" }
pulldown-cmark.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
