[package]
name = "cell-css"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
cell-css-proto = { path = "../cell-css-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
lightningcss.workspace = true
