[package]
autobins = false
name = "cell-css"
version = "0.0.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_css"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-css-proto = { path = "../cell-css-proto" }
lightningcss.workspace = true
