[package]
autobins = false
name = "cell-data"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_data"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[features]
default = ["dynamic-cell"]
dynamic-cell = ["dep:dodeca-cell-runtime"]

[dependencies]
cell-data-proto = { path = "../cell-data-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime", optional = true }
facet-format.workspace = true
facet-json.workspace = true
facet-toml.workspace = true
facet-yaml.workspace = true
