[package]
autobins = false
name = "cell-dialoguer"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
description = "Interactive terminal prompts for dodeca"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_dialoguer"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[features]
default = ["dynamic-cell"]
dynamic-cell = ["dep:dodeca-cell-runtime"]

[dependencies]
cell-dialoguer-proto = { path = "../cell-dialoguer-proto" }
dialoguer = "0.12"
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime", optional = true }
tokio.workspace = true
