[package]
autobins = false
name = "cell-dialoguer"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
description = "Interactive terminal prompts for dodeca"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_dialoguer"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-dialoguer-proto = { path = "../cell-dialoguer-proto" }
dialoguer = "0.12"
tokio.workspace = true
