[package]
name = "cell-fonts"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-fonts"
path = "src/main.rs"

[dependencies]
cell-fonts-proto = { path = "../cell-fonts-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime" }
fontcull.workspace = true
