[package]
autobins = false
name = "cell-fonts"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_fonts"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[features]
default = ["dynamic-cell"]
dynamic-cell = ["dep:dodeca-cell-runtime"]

[dependencies]
cell-fonts-proto = { path = "../cell-fonts-proto" }
dodeca-cell-runtime = { path = "../../crates/dodeca-cell-runtime", optional = true }
fontcull = { workspace = true, features = ["woff2"] }
tokio.workspace = true
