[package]
autobins = false
name = "cell-fonts"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "ddc_cell_fonts"
crate-type = ["rlib"]
path = "src/main.rs"

[dependencies]
cell-fonts-proto = { path = "../cell-fonts-proto" }
fontcull = { workspace = true, features = ["woff2"] }
tokio.workspace = true
