[package]
name = "cell-gingembre-proto"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
description = "Typed interface for dodeca template rendering"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-value.workspace = true
futures.workspace = true
